# tcomp

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: code-docs.md  how-to-guides.md  index.md
src/tcomp/: __init__.py  __main__.py  diff.py  error.py  transaction.py  transactions.py
tests/: test_diff.py  test_main.py  test_transaction.py
