[project]
name = "tcomp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tabulate>=0.9.0",
    "uynab>=0.1.1",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings>=0.27.0",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.1",
    "types-tabulate>=0.9.0.20241207",
]
