[project]
name = "tcomp"
version = "0.2.0"
description = "TCOMP - compare transactions between your Bank and YNAB"
readme = "README.md"
authors = [
    { name = "Adam Walkiewicz", email = "aj.walkiewicz@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "tabulate>=0.9.0",
    "uynab>=0.1.1",
]
keywords = ["money", "budget", "YNAB"]
classifiers = [
  # How mature is this project?
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/ajwalkiewicz/tcomp"
Issues = "https://github.com/ajwalkiewicz/tcomps/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings>=0.27.0",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.1",
    "types-tabulate>=0.9.0.20241207",
]
